#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package MsgLogger
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-08
2014-07-30 Igor Gaponenko
- boost 1.55.0 migration

Tag: V00-01-07
2013-09-17 Andy Salnikov
- documentation generation changed in SConsTools, updating SConscript

Tag: V00-01-06
2012-11-28 Andy Salnikov
- small fix to doxygen docs

Tag: V00-01-05
2012-07-24 Andy Salnikov
- rhel6/gcc44 migration, added missing headers

Tag: V00-01-04
2012-01-27 Andy Salnikov
- MsgLoggerImpl::getLogger() is now thread safe

Tag: V00-01-03
2011-12-09 Andy Salnikov
- doxygenated whole thing

Tag: V00-01-02
2011-10-24 Andy Salnikov
- removed include Lusi.h

Tag: V00-01-00
2009-09-29 Andy Salnikov
- MsgLogStream.h: changed the name of the temporary stream in macros to
  avoid name collision with other variables
- added an option to enable thread safety in MsgHandlerStdStreams.cpp, 
  see README

Tag: V00-00-07
2008-12-17 Andy Salnikov
- set correct svn properties on all files

Tag: V00-00-06
2008-12-17 Andy Salnikov
- fixed small memory leak in MsgHandler, formatter was not deleted 
  in the destructor

Tag: V00-00-05
2008-12-02 Andy Salnikov
- changed logic in MsgFormatter so that envvar format strings have
  priority over the application-global strings

Tag: V00-00-04
2008-12-02 Andy Salnikov
- new 'fatal' level added, causes immediate termination (via abort())
- MsgFormatter class has new static methods to modify global format strings
  common to all handlers. global format strings are used when formatter 
  does not provide its own strings.

Tag: V00-00-03
2008-11-03 Andy Salnikov
- updated README file

Tag: V00-00-02
2008-11-03 Andy Salnikov
- Few optimizations and small refactoring

Tag: V00-00-01